// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Pages should render the login page based on props ~ type 1`] = `
<Fragment>
  <div
    className="container"
  >
    <HomeHeader />
    <div
      className="main-wrapper auth-wrapper"
    >
      <div
        className="auth text-center"
      >
        <h2>
          Welcome Back
        </h2>
        <hr />
        <Connect(withRouter(LoginFrom)) />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Auth Pages should render the sign up page based on props ~ type 1`] = `
<Fragment>
  <div
    className="container"
  >
    <HomeHeader />
    <div
      className="main-wrapper auth-wrapper"
    >
      <div
        className="auth text-center"
      >
        <h2>
          Get Registered Today
        </h2>
        <hr />
        <Connect(withRouter(SignupForm)) />
      </div>
    </div>
  </div>
</Fragment>
`;
